<resources>
    <string name="app_name">Cavavin</string>

    <!-- Side bar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_tools">Outils</string>
    <string name="navigation_drawer_stats">Statistiques</string>
    <string name="navigation_drawer_map">Carte des vins</string>
    <string name="navigation_drawer_millesimes">Millésimes 2003–2017</string>
    <string name="navigation_drawer_config">Options</string>
    <string name="navigation_header_title">Cavavin</string>
    <string name="navigation_header_mail">mathieu.develop@gmail.com</string>


    <!-- Toolbar titles -->
    <string name="toolbar_home">Mes caves</string>
    <string name="toolbar_cave_modif">Modifier la cave</string>
    <string name="toolbar_cave_nouvelle">Nouvelle cave</string>
    <string name="toolbar_options">Options</string>
    <string name="toolbar_recherche_globale">Rechercher une bouteille</string>
    <string name="toolbar_infos_cave">Statistiques</string>
    <string name="toolbar_bouteille_nouvelle">Ajouter une bouteille</string>
    <string name="toolbar_bouteille_modifier">Modifier la bouteille</string>
    <string name="toolbar_bouteille_afficher">Informations</string>
    <string name="toolbar_bouteilles_degustees">Bouteilles Dégustées</string>
    <string name="toolbar_carte_vins">Carte des Vins de France</string>
    <string name="toolbar_millesimes_vins">Millésimes 2003–2017 des Vins de France</string>


    <!-- 1ère page home -->
    <string name="mes_caves">Mes caves</string>
    <string name="no_cave">Pas de cave existante ! Par ici pour en ajouter une…</string>
    <string name="choose_cave">Visualisez votre cave</string>
    <!-- Boutons -->
    <string name="add_cellar">Ajouter une cave</string>
    <string name="add_bottle">Ajouter une bouteille</string>
    <string name="del_bottle">Supprimer la bouteille</string>
    <string name="search_bottle">Rechercher une bouteille</string>
    <string name="content_cellar">Contenu de la cave</string>
    <string name="infos_cellar">Statistique de la cave</string>
    <string name="drunk_bottles">Bouteilles Dégustées</string>
    <string name="red">Rouges : </string>
    <string name="rose">Roses : </string>
    <string name="white">Blancs : </string>


    <!-- page nouvelle cave -->
    <string name="text_view_nom_cave">Nom *</string>
    <string name="text_view_nb_clayettes">Nombre de clayettes *</string>
    <string name="text_view_nb_bouteilles">Nombre de bouteilles (théorique) *</string>
    <string name="text_view_photo_cave">Sélectionner une photo</string>
    <string name="message_creation_cave_ok">Nouvelle cave ajoutée</string>
    <string name="message_creation_cave_ko">ERREUR dans la création de la cave… Veuillez réessayer</string>
    <string name="message_creation_cave_arg_manquant">Tous les champs sont obligatoires</string>
    <!-- menu nouvelle cave -->
    <string name="create_cellar">Créer la cave</string>

    <!-- page nouvelle cave -->
    <string name="message_modifier_cave_ok">Cave modifiée</string>
    <string name="message_modifier_cave_ko">ERREUR dans la modification de la cave… Veuillez réessayer</string>
    <!-- menu nouvelle cave -->
    <string name="save_cellar">Enregistrer</string>

    <!-- page statistiques -->
    <string name="text_view_stats_in_cellar_colors">bouteilles dans la cave par couleur</string>
    <string name="text_view_stats_degusted_colors">bouteilles bues par couleur</string>

    <string name="statsNb">Stats par nombre</string>
    <string name="statsPct">Stats par pourcentage</string>
    <string name="stats_cellar_value">Valeur de la cave : %1$.2f €</string>


    <!-- page options -->
    <string name="text_view_ajouter_pays">Ajouter/Choisir Pays</string>
    <string name="text_view_ajouter_region">Ajouter/Choisir Région</string>
    <string name="text_view_ajouter_appellation">Ajouter/Choisir Appellation</string>
    <string name="text_view_ajouter_donnnees"><u>Ajouter des Données</u></string>
    <string name="text_view_preferences_utilisateur"><u>Préférences Utilisateur (bientôt disponible)</u></string>
    <string name="text_view_infos_version"><u>Informations sur la version</u></string>
    <string name="text_view_version_name">Numéro de version</string>
    <string name="text_view_version_code">Version du code</string>
    <string name="text_view_base_code">Version de la base</string>
    <string name="text_view_sauvegarde_cloud">Sauver les données dans le cloud</string>
    <string name="text_view_sauvegarde_photos">Importer les photos</string>
    <string name="text_view_login_connexion">Login de connexion</string>
    <string name="message_ajouter_donnees_ok">Nouvelles données ajoutées</string>
    <string name="message_ajouter_region_ko">Sélectionner d\'abord un pays</string>
    <string name="message_ajouter_appellation_ko">Sélectionner d\'abord une region</string>
    <!-- menu options -->
    <string name="add_options">Ajouter les données</string>

    <string name="back_home_page">Home Page</string>
    <!-- page recherche globale -->
    <string name="text_view_criteres_recherche"><u>Critères de recherche :</u></string>
    <string name="text_view_boire_dans_l_annee"><u>A boire dans l\'année</u></string>
    <string name="text_view_recherche_par_criteres"><u>Par critères</u></string>
    <string name="text_view_recherche_texte_a_rechercher">Texte à rechercher</string>
    <string name="text_view_recherche_dans_tous_champs">Dans tous les champs</string>
    <string name="text_view_recherche_dans_certains_champs">Dans les champs suivants :</string>
    <string name="text_view_recherche_dans_domaine">Domaine</string>
    <string name="text_view_recherche_dans_millesime">Millésime</string>
    <string name="text_view_recherche_dans_region">Région</string>
    <string name="text_view_recherche_dans_appellation">Appellation</string>
    <string name="text_view_recherche_dans_commentaires">Commentaires</string>
    <string name="text_view_recherche_go">Lancer la recherche</string>
    <string name="message_recherche_criteres_ko">Veuillez sélectionner un critère de recherche</string>
    <string name="message_recherche_texte_ko">Veuillez renseigner un texte à rechercher</string>
    <string name="message_recherche_choix_champs_ko">Veuillez sélectionner les champs à rechercher</string>
    <string name="no_bouteille_recherche">Aucune bouteille avec ces critères</string>


    <!-- page visualiser cave (on voit les clayettes) -->
    <string name="edit_cellar">Modifier la cave</string>
    <string name="delete_cellar">Supprimer la cave</string>
    <string name="modify_clayettes">Modifier les clayettes</string>
    <string name="text_view_nom_domaine">Domaine : %1$s</string>
    <string name="no_bouteille">Aucune bouteille sur cette clayette ! Veuillez d\'abord en ajouter une</string>
    <string name="text_view_row_nb_bouteilles">Nombre de bouteilles : %1$d</string>
    <string name="message_supprimer_clayette_ko_bouteille">Impossible de supprimer : clayette non vide</string>
    <string name="message_supprimer_cave_ko_bouteille">Impossible de supprimer : cave non vide</string>
    <string name="message_supprimer_clayette_ko">ERREUR dans la suppression de la clayette… Veuillez réessayer</string>
    <string name="message_modifier_clayette_ko">ERREUR dans la modification de la clayette… Veuillez réessayer</string>
    <string name="message_supprimer_clayette_ok">clayette supprimée</string>

    <!-- page visualiser clayette (on voit les bouteilles) -->
    <string name="text_view_drunk_bottle">Dégustée ?</string>
    <string name="text_view_drunk_bottle_yes">Oui, Bue !</string>

    <!-- page ajouter bouteille -->
    <string name="create_bottle">Ajouter une bouteille</string>
    <string name="text_view_generalites"><u>Géneralités</u></string>
    <string name="text_view_emplacement"><u>Emplacement</u></string>
    <string name="text_view_provenance"><u>Provenance</u></string>
    <string name="text_view_options"><u>Options</u></string>
    <string name="text_view_domaine">Domaine *</string>
    <string name="text_view_pays">Pays</string>
    <string name="text_view_region">Région</string>
    <string name="text_view_appellation">Appellation</string>
    <string name="text_view_millesime">Millésime</string>
    <string name="text_view_apogee_min">Apogées : min</string>
    <string name="text_view_apogee_max">max</string>
    <string name="text_view_couleur">Couleur</string>
    <string name="text_view_petillant">Petillant</string>
    <string name="text_view_prix">Prix (€)</string>
    <string name="text_view_lieu_dachat">Lieu d\'achat</string>
    <string name="text_view_date_dachat">Date d\'achat</string>
    <string name="text_view_commentaires">Commentaires</string>
    <string name="text_view_clayette">Clayette *</string>
    <string name="text_view_cave">Cave *</string>
    <string name="text_view_quantite">Quantite *</string>
    <string name="text_view_cepage">Cepage</string>
    <string name="text_view_bio">Bio</string>
    <string name="message_creation_bouteille_ko_nomDomaine">Merci de renseigner le domaine / château</string>
    <string name="message_creation_bouteille_ko_clayette">Merci de renseigner la cave et la clayette</string>
    <string name="message_creation_bouteille_ko">ERREUR dans l\'insertion de la bouteille… Veuillez réessayer</string>
    <string name="message_creation_bouteille_ok">Nouvelle bouteille ajoutée</string>
    <string name="click_to_choose_date_dachat">Cliquer pour choisir</string>

    <!-- page modifier bouteille -->
    <string name="modif_bottle">Enregistrer</string>
    <string name="delete_bottle">Supprimer la bouteille</string>
    <string name="message_modifier_bouteille_ko">ERREUR dans la modification de la bouteille… Veuillez réessayer</string>
    <string name="message_modifier_bouteille_ko_memoire">Mémoire insuffisante. Veuillez faire de la place sur le téléphone et réessayer</string>
    <string name="message_supprimer_bouteille_ko">ERREUR dans la suppression de la bouteille… Veuillez réessayer</string>
    <string name="message_modifier_bouteille_ok">bouteille modifiée</string>
    <string name="message_supprimer_bouteille_ok">bouteille supprimée</string>
    <string name="text_view_date_degustation">Date de dégustation</string>
    <string name="click_to_choose_date_degustation">Cliquer pour choisir</string>

    <!-- page bouteilles dégustées -->
    <string name="no_drunk_bouteille">Aucune bouteille dégustée !</string>
    <string name="button_deguster">Dégustée !</string>
    <string name="text_view_row_millesime">Millésime : %1$d</string>
    <string name="text_view_row_no_millesime">Millésime : %1$s</string>
    <string name="text_view_row_date_degustation">Date de dégustation : %1$s</string>

    <!-- page afficher bouteille -->
    <string name="show_bottle">Visualiser</string>
    <string name="text_foo">foo</string>
    <string name="to_modif_bottle">Modifier la bouteille</string>
    <string name="message_date_degustation_ok">Bouteille bue :-)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
