<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/back_home_page"
        android:tooltipText="@string/back_home_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/ajouter_bouteille"
        android:icon="@drawable/bottleplus"
        android:title="@string/search_bottle"
        app:showAsAction="always" />
    <item
        android:id="@+id/modify_cave"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit_cellar"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/delete_cave"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_cellar"
        app:showAsAction="ifRoom|withText" />


</menu>