<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tintin.mat.winecellar.activity.AjouterBouteilleActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="25dp"
    android:id="@+id/slideBottle">


    <ImageButton
        android:contentDescription="@string/action_settings"
        android:id="@+id/bouteillePhotoImageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/generalitesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_generalites"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"/>

    <TextView
        android:id="@+id/nomDomaineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_domaine"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generalitesTextView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/nomDomaineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/nomDomaineTextView" />

    <TextView
        android:id="@+id/millesimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_millesime"
        app:layout_constraintTop_toBottomOf="@+id/nomDomaineTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/millesimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/millesimeTextView" />

    <TextView
        android:id="@+id/paysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_pays"
        app:layout_constraintTop_toBottomOf="@+id/millesimeText"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/paysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/millesimeText"
        app:layout_constraintBaseline_toBaselineOf="@+id/paysTextView" />

    <TextView
        android:id="@+id/regionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_region"
        app:layout_constraintTop_toBottomOf="@+id/paysText"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/regionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/regionTextView" />

    <TextView
        android:id="@+id/appellationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_appellation"
        app:layout_constraintTop_toBottomOf="@+id/regionText"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/appellationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/appellationTextView" />

    <TextView
        android:id="@+id/couleurTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_couleur"
        app:layout_constraintTop_toBottomOf="@+id/appellationText"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/couleurText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/couleurTextView" />

    <TextView
        android:id="@+id/petillantTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_petillant"
        app:layout_constraintTop_toBottomOf="@+id/couleurText"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/petillantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/petillantTextView" />

    <TextView
        android:id="@+id/emplacementTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_emplacement"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/petillantText"
        app:layout_constraintLeft_toLeftOf="@+id/generalitesTextView"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/caveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_cave"
        app:layout_constraintTop_toBottomOf="@+id/emplacementTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/caveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/caveTextView" />

    <TextView
        android:id="@+id/clayetteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_clayette"
        app:layout_constraintTop_toBottomOf="@+id/caveTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/clayetteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/clayetteTextView" />


    <TextView
        android:id="@+id/optionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_options"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/clayetteText"
        app:layout_constraintLeft_toLeftOf="@+id/generalitesTextView"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/dateDegustationTextView"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:text="@string/text_view_date_degustation"
        app:layout_constraintTop_toBottomOf="@+id/optionsTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/dateDegustationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateDegustationTextView" />

    <TextView
        android:id="@+id/prixDachatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_prix"
        app:layout_constraintTop_toBottomOf="@+id/dateDegustationTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/prixDachatText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintBaseline_toBaselineOf="@+id/prixDachatTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText" />

    <CheckBox
        android:clickable="false"
        android:id="@+id/bioCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_bio"
        app:layout_constraintTop_toBottomOf="@+id/prixDachatTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:id="@+id/lieuDachatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_lieu_dachat"
        app:layout_constraintTop_toBottomOf="@+id/bioCheckBox"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/lieuDachatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/lieuDachatTextView" />

    <TextView
        android:id="@+id/dateDachatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_date_dachat"
        app:layout_constraintTop_toBottomOf="@+id/lieuDachatTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/dateDachatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateDachatTextView" />

    <TextView
        android:id="@+id/commentairesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_commentaires"
        app:layout_constraintTop_toBottomOf="@+id/dateDachatTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <EditText
        android:id="@+id/commentairesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:focusable="false"
        android:lines="2"
        android:text="@string/text_foo"
        app:layout_constraintBaseline_toBaselineOf="@+id/commentairesTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineText" />


    <TextView
        android:id="@+id/apogeeMinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_apogee_min"
        app:layout_constraintTop_toBottomOf="@+id/commentairesText"
        app:layout_constraintLeft_toLeftOf="@+id/nomDomaineTextView" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/apogeeMinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/apogeeMinTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/apogeeMinTextView" />

    <TextView
        android:id="@+id/apogeeMaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_apogee_max"
        app:layout_constraintTop_toBottomOf="@+id/commentairesText"
        app:layout_constraintLeft_toRightOf="@+id/apogeeMinText" />

    <TextView
        android:text="@string/text_foo"
        android:id="@+id/apogeeMaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/apogeeMaxTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/apogeeMaxTextView" />

</android.support.constraint.ConstraintLayout>
    </ScrollView>