<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/back_home_page"
        android:tooltipText="@string/back_home_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/to_modif_bouteille"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/to_modif_bottle"
        android:tooltipText="@string/to_modif_bottle"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/to_open_bouteille"
        android:icon="@drawable/tire_bouchon"
        android:title="@string/to_modif_bottle"
        android:tooltipText="@string/to_modif_bottle"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/del_bouteille"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_bottle"
        android:tooltipText="@string/delete_bottle"
        app:showAsAction="always|withText" />


</menu>