<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe"
    app:leftEdgeSwipeOffset="0dp"
    app:rightEdgeSwipeOffset="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/side_nav_bar"
        android:gravity="center"
        android:tag="Bottom3"
        android:weightSum="10">

    <ImageView
        android:id="@+id/tire_bouchon"
        android:layout_width="27dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:src="@drawable/tire_bouchon" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/text_view_drunk_bottle"
        android:textColor="#fff"
        android:textSize="17sp" />

    <Button
        android:id="@+id/drunk"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="4"
        android:background="@drawable/white"
        android:text="@string/text_view_drunk_bottle_yes"
        android:textColor="#FF5534" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_selector"
        >

        <ImageView
            android:id="@+id/avatarBouteille"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:background="#AAA" />

        <TextView
            android:id="@+id/nomDomaineRowTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/avatarBouteille"
            android:layout_toRightOf="@+id/avatarBouteille"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/text_view_nom_domaine" />

        <TextView android:id="@+id/nomAppellationRowTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_below="@+id/nomDomaineRowTextView"
            android:layout_alignLeft="@+id/nomDomaineRowTextView"
            tools:text="@string/text_view_appellation"
            android:layout_marginTop="5dp"/>

        <TextView android:id="@+id/millesimeRowTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_below="@+id/nomAppellationRowTextView"
            android:layout_alignLeft="@+id/nomDomaineRowTextView"
            tools:text="@string/text_view_millesime"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>
</com.daimajia.swipe.SwipeLayout>